themes/peccole-nevada/style.css
/*
Theme Name: Child theme of Primobiz
Theme URI: http://legentpt.com/
Description: This is a custom child theme for Legend Health Care Physical Therapy
Author: Primo Motif ad & design agency
Author URI: http://primomotif.com
Template: primobiz
Version: 0.1
*/

/*@import url("../primobiz/style.css");*/

/* 
Class Table of Contents

1. Global Elements
2. Header Elements
3. Navigation Elements
4. Structure Elements
5. Font Elements
*/

/*----------------------------------
1. Global Elements
-----------------------------------*/

.header{
	min-height: 670px;
}
.pre-footer{
	background-color: #00529b; 
	min-height: 300px;
}
footer{
	background-color: #00417b; 
	min-height: 80px;
}

/*----------------------------------
2. Header Elements
-----------------------------------*/

.logo{}

/*----------------------------------
3. Navigation Elements
-----------------------------------*/

.nav-wrapper{
	background-color:#00529b; 
}
nav.navbar{
	margin: 0px; 
	min-height: 90px; 
	border-radius: 0px; 
	border:none;
	background-color:#00529b; 
}
nav.navbar-default{
	text-align: center;
}
nav.navbar-default ul{
	margin: 20px 0px 0px 0px;
}
nav.navbar-default ul li{
	padding:0px 20px;
}
nav.navbar-default ul li a{
	color:#fff !important;
}

/*----------------------------------
4. Structure Elements
-----------------------------------*/

.intro{
	text-align: center; 
	padding:95px 30px; 
	background-color: #e7edf3; 
	background-image: url('img/intro-background.jpg'); 
	background-repeat: no-repeat; 
	background-size: cover; 
	background-position: center;
}
.main .content-wrapper{
	padding:0;
}
ul.uus-posts-wrapper{
	list-style-type: none; 
	margin: 0px; 
	padding: 0px;
}
ul.uus-posts-wrapper li{
	padding: 0px; 
	margin: 0px;
}
.uus-flat-text-wrapper{
	background-color: #00529b;
	visibility:hidden;
	opacity:0;
	position:relative;
	top:-200px;

	-webkit-transition: all 0.2s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
	transition: all 0.2s ease-out;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
}
.uus-posts-wrapper li:hover .uus-flat-text-wrapper{
	visibility:visible;
	opacity:1;
}
.uus-posts-wrapper .uus-flat-text-wrapper h3{
	margin-top:0;
}

#gmap{
	height: 500px;
	opacity: .75;
}
/*----------------------------------
5. Font Elements
-----------------------------------*/

.intro pre{
	margin: 0px; 
	padding-top: 0px; 
	background: none; 
	border:none; 
	color:#00529b;
}
.intro h1{
	margin: 0px 0px 45px 0px; 
	padding-top: 0px; 
	color:#00529b;
}
.intro p{
	line-height: 32px; 
	font-size: 17px;
}
.pre-footer h3{
	color:#71b6f3; 
	margin: 60px 0px 30px 0px;
}
.pre-footer p{
	color: #fff;
}
footer p{
	color: #fff; 
	margin: 30px 0px 0px 0px; 
	font-size: 12px;
}

